<resources>
    <string name="register_passkey">Register new passkey</string>
    <string name="add_new_fido2_device">Add new FIDO2 device</string>
    <string name="app_name">identity sdk demo</string>
    <string name="code">Code</string>
    <string name="devices_title">List of devices</string>
    <string name="email">Email</string>
    <string name="exchange_tkn_at">Exchange tkn with access token</string>
    <string name="family_name">Family name</string>
    <string name="fill_email_or_phone">Fill the email or the phone input</string>
    <string name="first_name">First name</string>
    <string name="friendly_name">Device name</string>
    <string name="verification_code">Verification code</string>
    <string name="given_name">Given name</string>
    <string name="java">Java</string>
    <string name="last_name">Last name</string>
    <string name="login_web">Login with Web</string>
    <string name="login_webview">Login with WebView</string>
    <string name="webview_sso_data">Webview SSO data</string>
    <string name="native_logout">Logout WebView + Revoke Tokens</string>
    <string name="login">Login</string>
    <string name="login_with_passkey">Login with Passkey</string>
    <string name="discoverable_login">Discoverable login</string>
    <string name="login_with_fido2">Login with FIDO2</string>
    <string name="login_with_callback">Login with callback</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_number_enrollment_mfa">MFA Phone Number</string>
    <string name="phone_number_passwordless">SMS Passwordless</string>
    <string name="redirect_uri">Redirect URI for Passwordless</string>
    <string name="redirect_url_mfa_email_registration">Redirect URL for mfa email registration</string>
    <string name="redirect_url">Redirect URL for signup template (optional)</string>
    <string name="remove">Remove</string>
    <string name="start_passwordless">Start Passwordless</string>
    <string name="start_mfa_email_registration">Start Mfa email Registration</string>
    <string name="start_step_up">Start Step up</string>
    <string name="end_step_up">End step up</string>
    <string name="start_mfa_phone_number_registration">Start Mfa Phone Number Registration</string>
    <string name="signup">Signup</string>
    <string name="account_recovery">Account Recovery</string>
    <string name="signup_with_passkey">Signup with passkey</string>
    <string name="reset_passkeys">Reset passkeys</string>
    <string name="signup_with_fido2">Signup with FIDO2</string>
    <string name="send_email_verification">send Email verification</string>
    <string name="verify_email">Verify Email</string>


    <string name="tkn">Token</string>
    <string name="verify_mfa_email_registration">Verify email mfa</string>
    <string name="verify_mfa_phone_number_registration">Verify Phone number mfa</string>
    <string name="customtab_logout">Native + CustomTab logout</string>

    <string name="facebook_app_id">1634029666893228</string>
    <string name="facebook_client_token">1a774a90e2e5ec97b21afcd93ce69909</string>
    <string name="custom_identifier">Custom ID</string>
<string name="asset_statements" translatable="false">
[{
  \"include\": \"https://dev-sandbox-268508.web.app/.well-known/assetlinks.json\"
}]
</string>
    <string name="email_verification">Email Verification</string>
    <string name="use_ephemeral_browsing">Use Ephemeral Browsing for login with web</string>

</resources>
