<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/title"
        style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_with_fido2" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fill_email_or_phone" />

    <EditText
        android:id="@+id/webAuthnEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:lines="1" />

    <EditText
        android:id="@+id/webAuthnPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/phone_number"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:lines="1" />

    <Button
        android:id="@+id/loginWithWebAuthn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/login" />

    <Button
            android:id="@+id/loginWithPasskey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_with_passkey" />

    <Button
        android:id="@+id/discoverableLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/discoverable_login" />
</LinearLayout>
