<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/title"
        style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_with_fido2" />

    <EditText
        android:id="@+id/signupWebAuthnEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:lines="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/signupWebAuthnGivenName"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="@string/given_name"
            android:hint="@string/given_name"
            android:inputType="text"
            android:lines="1" />


        <EditText
            android:id="@+id/signupWebAuthnFamilyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="@string/family_name"
            android:hint="@string/family_name"
            android:inputType="text"
            android:lines="1" />
    </LinearLayout>

    <EditText
        android:id="@+id/signupWebAuthnNewFriendlyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/friendly_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:lines="1" />

    <Button
        android:id="@+id/signupWithWebAuthn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/signup" />

    <Button
            android:id="@+id/signupWithPasskey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/signup_with_passkey" />
</LinearLayout>