<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/loginWithCallbackTitle"
        style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exchange_tkn_at" />

    <EditText
        android:id="@+id/tkn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/tkn"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingTop="0dp" />

    <Button
        android:id="@+id/loginWithCallback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/login_with_callback" />
</LinearLayout>