<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/redirectUriInput"
                android:layout_width="match_parent"
                android:importantForAutofill="no"
                android:layout_weight="1"
                android:hint="@string/redirect_url_mfa_email_registration"
                android:lines="1"
                android:inputType="textUri"
                android:layout_height="wrap_content" />
        <Button
            android:id="@+id/startMfaEmailRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_mfa_email_registration"
            />

        <EditText
            android:id="@+id/emailMfaVerificationCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/code"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingTop="0dp" />
        <Button
            android:id="@+id/verifyMfaEmailRegistration"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/verify_mfa_email_registration" />
    </LinearLayout>

    <LinearLayout
        android:paddingTop="20px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/phoneNumberRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number_enrollment_mfa" />
            <Button
                android:id="@+id/startMfaPhoneNumberRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_mfa_phone_number_registration" />
            <EditText
                android:id="@+id/phoneNumberMfaVerificationCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/code"
                android:inputType="text" />

            <Button
                android:id="@+id/verifyMfaPhoneNumberRegistration"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/verify_mfa_phone_number_registration"/>
    </LinearLayout>

    </LinearLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars = "vertical"
        android:scrollbarStyle="insideInset"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="25dp"
                android:text="MFA Trusted devices"/>
            <ListView
                android:id="@+id/trustedDevices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:textSize="25dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="MFA credentials"/>
            <ListView
                android:id="@+id/credentials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>