<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/newFriendlyName"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/friendly_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:lines="1" />

        <Button
            android:id="@+id/addNewDevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_new_fido2_device" />
    </LinearLayout>

    <TextView
        android:id="@+id/devicesTitle"
        style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/devices_title"
        android:visibility="invisible" />

    <ListView
        android:id="@+id/devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>